--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
 		"@types/node": "^9.6.0",
+		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.8",
 		"aws-sdk": "^2.211.1",
 		"ccxt": "^1.12.61",
@@ -24,6 +25,7 @@
 		"commander": "^2.15.1",
 		"moment": "^2.21.0",
 		"rxjs": "^5.5.8",
+		"uuid": "^3.2.1",
 		"winston": "^2.4.1"
 	},
 	"devDependencies": {
