--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"license": "ISC",
 	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
+		"@types/elasticsearch": "^5.0.22",
 		"@types/node": "^9.6.0",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.8",
@@ -23,6 +24,7 @@
 		"ccxt": "^1.12.61",
 		"coinmarketcap-api": "^1.0.2",
 		"commander": "^2.15.1",
+		"elasticsearch": "^14.2.2",
 		"moment": "^2.21.0",
 		"rxjs": "^5.5.8",
 		"uuid": "^3.2.1",
