Refactor code for better types and debugging

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "allowJs": false,
+	"allowJs": false,
+	"alwaysStrict": true,
     "declaration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
@@ -8,38 +9,28 @@
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2017", "dom"],
     "module": "commonjs",
-    "moduleResolution": "node",
+	"moduleResolution": "node",
+	// "noEmitOnError": true,
+	"noErrorTruncation": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
 	"noImplicitThis": true,
-	// "noUnusedParameters": true,
     "noLib": false,
     "noUnusedLocals": false,
+	// "noUnusedParameters": true,
 	"outDir": "dist",
 	"pretty": true,
     "removeComments": true,
     "rootDir": "src",
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "suppressImplicitAnyIndexErrors": true,
-	"target": "es2017",
-	// "watch": true
+	"sourceMap": true,
+	"strict": true,
+	// "strictFunctionTypes": true,
+    // "strictNullChecks": true,
+    // "strictPropertyInitialization": true,
+	"suppressImplicitAnyIndexErrors": true,
+	"skipLibCheck": true,
+	"target": "es2017"
   },
-  // "formatCodeOptions": {
-  //   "convertTabsToSpaces": false,
-  //   "indentSize": 4,
-  //   "insertSpaceAfterCommaDelimiter": true,
-  //   "insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
-  //   "insertSpaceAfterKeywordsInControlFlowStatements": true,
-  //   "insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": false,
-  //   "insertSpaceAfterSemicolonInForStatements": true,
-  //   "insertSpaceBeforeAndAfterBinaryOperators": true,
-  //   "newLineCharacter": "\r\n",
-  //   "placeOpenBraceOnNewLineForControlBlocks": false,
-  //   "placeOpenBraceOnNewLineForFunctions": false,
-  //   "tabSize": 4
-  // },
   "include": [
     "src/**/*"
   ],
