--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
 		"@types/elasticsearch": "^5.0.22",
+		"@types/http-aws-es": "^1.1.3",
 		"@types/node": "^9.6.0",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.8",
@@ -24,7 +25,8 @@
 		"ccxt": "^1.12.61",
 		"coinmarketcap-api": "^1.0.2",
 		"commander": "^2.15.1",
-		"elasticsearch": "^14.2.2",
+		"elasticsearch": "^13.3.1",
+		"http-aws-es": "^4.0.0",
 		"moment": "^2.21.0",
 		"rxjs": "^5.5.8",
 		"uuid": "^3.2.1",
