Fixed connecting ElasticSearch and other changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
     "noImplicitReturns": true,
 	"noImplicitThis": true,
     "noLib": false,
-    "noUnusedLocals": false,
-	// "noUnusedParameters": true,
-	"outDir": "dist",
+    // "noUnusedLocals": true,
+	"noUnusedParameters": true,
+	"outDir": "bin",
 	"pretty": true,
     "removeComments": true,
     "rootDir": "src",
