--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Statistics service",
 	"main": "index.js",
 	"scripts": {
-		"start": "node dist/index.js",
+		"start": "node bin/index.js",
 		"build": "tsc",
 		"lint": "tslint -p ."
 	},
