--- a/package.json
+++ b/package.json
@@ -6,31 +6,40 @@
 	"scripts": {
 		"start": "node bin/index.js",
 		"build": "tsc",
-		"lint": "tslint -p ."
+		"lint": "tslint -p . -t verbose"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+ssh://git@bitbucket.org:icoindexteam/icoindex-statistics.git"
 	},
-	"author": "Míla Kuchta",
+	"author": "Míla Kuchta <mila.kuchta@gmail.com>",
 	"license": "ISC",
 	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
 		"@types/elasticsearch": "^5.0.22",
+		"@types/express": "^4.11.1",
+		"@types/express-graphql": "^0.6.1",
+		"@types/graphql": "^0.13.0",
 		"@types/http-aws-es": "^1.1.3",
 		"@types/node": "^9.6.0",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.8",
+		"@types/yargs": "^11.0.0",
 		"aws-sdk": "^2.211.1",
 		"ccxt": "^1.12.61",
 		"coinmarketcap-api": "^1.0.2",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
+		"express": "^4.16.3",
+		"express-graphql": "^0.6.12",
+		"graphql": "^0.13.2",
 		"http-aws-es": "^4.0.0",
 		"moment": "^2.21.0",
+		"pargv": "^2.1.2",
 		"rxjs": "^5.5.8",
 		"uuid": "^3.2.1",
-		"winston": "^2.4.1"
+		"winston": "^2.4.1",
+		"yargs": "^11.0.0"
 	},
 	"devDependencies": {
 		"typescript": "^2.8.1",
