Elastic query and other updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,42 @@
 {
-  "compilerOptions": {
-	"allowJs": false,
-	"alwaysStrict": true,
-	"allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["es2017", "dom"],
-    "module": "commonjs",
-	"moduleResolution": "node",
-	// "noEmitOnError": true,
-	"noErrorTruncation": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-	"noImplicitThis": true,
-    "noLib": false,
-    // "noUnusedLocals": true,
-	"noUnusedParameters": true,
-	"outDir": "bin",
-	"pretty": true,
-    "removeComments": true,
-    "rootDir": "src",
-	"sourceMap": true,
-	"strict": true,
-	// "strictFunctionTypes": true,
-    // "strictNullChecks": true,
-    // "strictPropertyInitialization": true,
-	"suppressImplicitAnyIndexErrors": true,
-	"skipLibCheck": true,
-	"target": "es2017"
-  },
-  "include": [
-    "src/**/*"
-  ],
-  "compileOnSave": true
+	"compilerOptions": {
+		"allowJs": false,
+		"alwaysStrict": true,
+		"allowSyntheticDefaultImports": true,
+		"declaration": true,
+		"emitDecoratorMetadata": true,
+		"esModuleInterop": true,
+		"experimentalDecorators": true,
+		"forceConsistentCasingInFileNames": true,
+		"lib": [
+			"es2017",
+			"dom"
+		],
+		"module": "commonjs",
+		"moduleResolution": "node",
+		// "noEmitOnError": true,
+		"noErrorTruncation": true,
+		"noImplicitAny": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noLib": false,
+		// "noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"outDir": "bin",
+		"pretty": true,
+		"removeComments": false,
+		"rootDir": "src",
+		"sourceMap": true,
+		"strict": true,
+		// "strictFunctionTypes": true,
+		// "strictNullChecks": true,
+		// "strictPropertyInitialization": true,
+		"suppressImplicitAnyIndexErrors": true,
+		"skipLibCheck": true,
+		"target": "es2017"
+	},
+	"include": [
+		"src/**/*"
+	],
+	"compileOnSave": true
 }
