--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
 		"@types/winston": "^2.3.8",
 		"@types/yargs": "^11.0.0",
 		"aws-sdk": "^2.211.1",
+		"cac": "^5.0.10",
+		"caporal": "^0.10.0",
 		"ccxt": "^1.12.61",
 		"coinmarketcap-api": "^1.0.2",
 		"commander": "^2.15.1",
+		"commandpost": "^1.3.0",
 		"elasticsearch": "^13.3.1",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
