CLI for manipulating ElasticSearch, Elastic query optimalizations and other improvements

--- a/config.json
+++ b/config.json
@@ -11,5 +11,5 @@
 	"GRAPHQL_PORT": 3000,
 	"DYNAMO_INTERVAL": 100,
 	"EXCHANGE_INTERVAL": 5000,
-	"MAX_DATETIME_PROXIMITY": "2 hours"
+	"MAX_DATETIME_PROXIMITY": "1 hour"
 }
