--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "node bin/index.js",
 		"build": "tsc",
-		"lint": "tslint -p . -t verbose"
+		"lint": "tslint -p . -t verbose",
+		"test": "mocha"
 	},
 	"repository": {
 		"type": "git",
@@ -16,30 +17,33 @@
 	"license": "ISC",
 	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
-		"@types/elasticsearch": "^5.0.22",
+		"@types/elasticsearch": "^5.0.23",
 		"@types/express": "^4.11.1",
 		"@types/express-graphql": "^0.6.1",
 		"@types/graphql": "^0.13.0",
 		"@types/http-aws-es": "^1.1.3",
-		"@types/node": "^9.6.0",
+		"@types/node": "^9.6.8",
 		"@types/uuid": "^3.4.3",
-		"@types/winston": "^2.3.8",
-		"aws-sdk": "^2.211.1",
-		"ccxt": "^1.12.61",
+		"@types/winston": "^2.3.9",
+		"aws-sdk": "^2.230.1",
+		"ccxt": "^1.13.60",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
 		"graphql": "^0.13.2",
+		"graphql-request": "^1.5.2",
 		"http-aws-es": "^4.0.0",
-		"moment": "^2.21.0",
-		"rxjs": "^5.5.8",
+		"moment": "^2.22.1",
+		"nanographql": "^2.0.0",
+		"rxjs": "^6.0.0",
 		"uuid": "^3.2.1",
-		"winston": "^2.4.1",
-		"yargs": "^11.0.0"
+		"winston": "^2.4.2"
 	},
 	"devDependencies": {
-		"typescript": "^2.8.1",
-		"tslint": "^5.9.1"
+		"assert": "^1.4.1",
+		"mocha": "^5.1.1",
+		"tslint": "^5.9.1",
+		"typescript": "^2.8.3"
 	}
 }
