--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/graphql": "^0.13.0",
 		"@types/http-aws-es": "^1.1.3",
 		"@types/node": "^9.6.8",
+		"@types/ramda": "^0.25.24",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.9",
 		"aws-sdk": "^2.230.1",
@@ -36,6 +37,7 @@
 		"http-aws-es": "^4.0.0",
 		"moment": "^2.22.1",
 		"nanographql": "^2.0.0",
+		"ramda": "^0.25.0",
 		"rxjs": "^6.0.0",
 		"uuid": "^3.2.1",
 		"winston": "^2.4.2"
