--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "node bin/index.js",
 		"build": "tsc",
 		"lint": "tslint -p . -t verbose",
-		"test": "mocha"
+		"test": "node bin/index.js test|npx tap-difflet"
 	},
 	"repository": {
 		"type": "git",
@@ -23,7 +23,7 @@
 		"@types/graphql": "^0.13.0",
 		"@types/http-aws-es": "^1.1.3",
 		"@types/node": "^9.6.8",
-		"@types/ramda": "^0.25.24",
+		"@types/tape": "^4.2.32",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.9",
 		"aws-sdk": "^2.230.1",
@@ -37,14 +37,13 @@
 		"http-aws-es": "^4.0.0",
 		"moment": "^2.22.1",
 		"nanographql": "^2.0.0",
-		"ramda": "^0.25.0",
 		"rxjs": "^6.0.0",
 		"uuid": "^3.2.1",
 		"winston": "^2.4.2"
 	},
 	"devDependencies": {
-		"assert": "^1.4.1",
-		"mocha": "^5.1.1",
+		"tap-difflet": "^0.7.1",
+		"tape": "^4.9.0",
 		"tslint": "^5.9.1",
 		"typescript": "^2.8.3"
 	}
