Fix configuration to use 5 minute interval per request

--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
 	"GRAPHQL_HOST": "localhost",
 	"GRAPHQL_PORT": 3000,
 	"DYNAMO_INTERVAL": 100,
-	"EXCHANGE_INTERVAL": 5000,
+	"EXCHANGE_INTERVAL": 300000,
+	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours"
 }
