--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
 	"name": "icoindex-statistics",
 	"version": "0.0.1",
 	"description": "Statistics service",
+	"license": "ISC",
+	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
+	"author": "Míla Kuchta <mila.kuchta@gmail.com>",
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@bitbucket.org:icoindexteam/icoindex-statistics.git"
+	},
+	"engines": {
+		"node": ">=8.11.0"
+	},
 	"main": "index.js",
 	"scripts": {
 		"start": "node bin/index.js",
@@ -9,44 +19,37 @@
 		"lint": "tslint -p . -t verbose",
 		"test": "node bin/index.js test|npx tap-difflet"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@bitbucket.org:icoindexteam/icoindex-statistics.git"
-	},
-	"author": "Míla Kuchta <mila.kuchta@gmail.com>",
-	"license": "ISC",
-	"homepage": "https://bitbucket.org/icoindexteam/icoindex-statistics",
 	"dependencies": {
 		"@types/elasticsearch": "^5.0.23",
 		"@types/express": "^4.11.1",
 		"@types/express-graphql": "^0.6.1",
-		"@types/graphql": "^0.13.0",
+		"@types/graphql": "^0.13.1",
 		"@types/http-aws-es": "^1.1.3",
-		"@types/node": "^9.6.8",
-		"@types/ramda": "^0.25.24",
+		"@types/node": "^9.6.16",
+		"@types/ramda": "^0.25.28",
 		"@types/tape": "^4.2.32",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.9",
-		"aws-sdk": "^2.230.1",
-		"ccxt": "^1.13.60",
+		"aws-sdk": "^2.239.1",
+		"ccxt": "^1.13.149",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
 		"graphql": "^0.13.2",
-		"graphql-request": "^1.5.2",
+		"graphql-request": "^1.6.0",
 		"http-aws-es": "^4.0.0",
 		"moment": "^2.22.1",
-		"nanographql": "^2.0.0",
 		"ramda": "^0.25.0",
-		"rxjs": "^6.0.0",
+		"rxjs": "^6.1.0",
+		"tap-difflet": "^0.7.1",
+		"tape": "^4.9.0",
+		"tape-async": "^2.3.0",
 		"uuid": "^3.2.1",
 		"winston": "^2.4.2"
 	},
 	"devDependencies": {
-		"tap-difflet": "^0.7.1",
-		"tape": "^4.9.0",
-		"tslint": "^5.9.1",
+		"tslint": "^5.10.0",
 		"typescript": "^2.8.3"
 	}
 }
