--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
 		],
 		"module": "commonjs",
 		"moduleResolution": "node",
+		// "noEmitHelpers": false,
 		// "noEmitOnError": true,
 		"noErrorTruncation": true,
 		"noImplicitAny": true,
@@ -24,19 +25,20 @@
 		"noUnusedParameters": true,
 		"outDir": "bin",
 		"pretty": true,
+		// "reflectionEnabled": true,
 		"removeComments": false,
 		"rootDir": "src",
 		"sourceMap": true,
 		"strict": true,
 		// "strictFunctionTypes": true,
 		// "strictNullChecks": true,
-		// "strictPropertyInitialization": true,
+		"strictPropertyInitialization": false,
 		"suppressImplicitAnyIndexErrors": true,
 		"skipLibCheck": true,
-		"target": "es2017"
+		"target": "es2017",
 	},
+	"compileOnSave": true,
 	"include": [
 		"src/**/*"
-	],
-	"compileOnSave": true
+	]
 }
