Remove defaults dependent on environment from config

--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-	"AWS_REGION": "eu-west-1",
-	"AWS_ACCESS_ID": "AKIAJSTW7COGSQWQE4GQ",
-	"AWS_SECRET_KEY": "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",
-	"AWS_SNS_TOPIC": "arn:aws:sns:eu-west-1:234333348657:icoindex-staging-event-add-coin-trading-item",
-	"AWS_SQS_QUEUE_URL": "https://sqs.eu-west-1.amazonaws.com/234333348657/icoindex-staging-queue-coin-trading",
-	"AWS_DYNAMO_TABLE": "icoindexstaging.cointradinghistory",
-	"AWS_ELASTIC_HOST": "search-icoindex-staging-gywi2nq266suyvyjfux67mhf44.eu-west-1.es.amazonaws.com",
-	"AWS_ELASTIC_INDEX": "icoindexstaging.cointradinghistory",
-	"AWS_ELASTIC_TYPE": "icoindexstaging.cointradinghistory_type",
+	"AWS_REGION": "",
+	"AWS_ACCESS_ID": "",
+	"AWS_SECRET_KEY": "",
+	"AWS_SNS_TOPIC": "",
+	"AWS_SQS_QUEUE_URL": "",
+	"AWS_DYNAMO_TABLE": "",
+	"AWS_ELASTIC_HOST": "",
+	"AWS_ELASTIC_INDEX": "",
+	"AWS_ELASTIC_TYPE": "",
 	"GRAPHQL_HOST": "localhost",
-	"GRAPHQL_PORT": 3000,
+	"GRAPHQL_PORT": 8080,
 	"DYNAMO_INTERVAL": 100,
 	"EXCHANGE_INTERVAL": 300000,
 	"EXCHANGE_TIMEOUT": 60000,
