--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 		"ccxt": "^1.13.149",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
+		"ethers": "^3.0.17",
+		"ethers-typescript-typings": "0.0.4",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
 		"graphql": "^0.13.2",
@@ -50,6 +52,6 @@
 	},
 	"devDependencies": {
 		"tslint": "^5.10.0",
-		"typescript": "^2.8.3"
+		"typescript": "^2.9.1"
 	}
 }
