--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
 		"pretty": true,
 		// "reflectionEnabled": true,
 		"removeComments": false,
+		// "resolveJsonModule": true,
 		"rootDir": "src",
 		"sourceMap": true,
 		"strict": true,
