--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@types/http-aws-es": "^1.1.3",
 		"@types/node": "^9.6.20",
 		"@types/ramda": "^0.25.32",
+		"@types/request-promise-native": "^1.0.15",
 		"@types/tape": "^4.2.32",
 		"@types/uuid": "^3.4.3",
 		"@types/winston": "^2.3.9",
@@ -34,7 +35,6 @@
 		"ccxt": "^1.14.121",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
-		"ethers": "^3.0.17",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
 		"graphql": "^0.13.2",
@@ -42,10 +42,11 @@
 		"http-aws-es": "^4.0.0",
 		"moment": "^2.22.2",
 		"ramda": "^0.25.0",
+		"request-promise-native": "^1.0.5",
 		"rxjs": "^6.2.0",
 		"tap-difflet": "^0.7.1",
 		"tape": "^4.9.0",
-		"tape-async": "^2.3.0",
+		"tokenbucket": "^0.3.2",
 		"uuid": "^3.2.1",
 		"winston": "^2.4.2"
 	},
