txFetchService loadNewAddress and gracefull shutdown implemented

--- a/config.json
+++ b/config.json
@@ -14,5 +14,5 @@
 	"EXCHANGE_INTERVAL": 300000,
 	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours",
-	"BLOCKCYPHER_TOKEN": "763bbbeee8864170856ff26cddc44fe1"
+	"BLOCKCYPHER_TOKEN": ""
 }
