--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"start": "node bin/index.js",
 		"build": "tsc",
 		"lint": "tslint -p . -t verbose",
-		"test": "node bin/index.js test|npx tap-difflet"
+		"test": "node bin/index.js tickerTest|npx tap-difflet"
 	},
 	"dependencies": {
 		"@types/elasticsearch": "^5.0.23",
@@ -35,6 +35,7 @@
 		"ccxt": "^1.14.121",
 		"commander": "^2.15.1",
 		"elasticsearch": "^13.3.1",
+		"ethers": "^3.0.21",
 		"express": "^4.16.3",
 		"express-graphql": "^0.6.12",
 		"graphql": "^0.13.2",
