--- a/config.json
+++ b/config.json
@@ -14,5 +14,6 @@
 	"EXCHANGE_INTERVAL": 300000,
 	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours",
-	"BLOCKCYPHER_TOKEN": ""
+	"BLOCKCYPHER_TOKEN": "",
+	"ETHEREUM_HOST": ""
 }
