--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"tape": "^4.9.0",
 		"tokenbucket": "^0.3.2",
 		"uuid": "^3.2.1",
+		"web3": "^1.0.0-beta.34",
 		"winston": "^2.4.2"
 	},
 	"devDependencies": {
