--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
 
   transaction-fetch-service:
     build: .
-    command: node bin/index.js -v -d tickerFetchService
+    command: node bin/index.js -v -d txFetchService
     environment:
     - NODE_ENV=${NODE_ENV}
     - IS_AWS_REGION=${AWS_REGION}
@@ -63,8 +63,10 @@ services:
     - IS_AWS_ACCESS_ID=${AWS_ACCESS_ID}
     - IS_AWS_SECRET_KEY=${AWS_SECRET_KEY}
     - IS_AWS_ELASTIC_HOST=${AWS_ELASTIC_HOST}
-    - IS_AWS_ELASTIC_INDEX=${AWS_ELASTIC_INDEX}
-    - IS_AWS_ELASTIC_TYPE=${AWS_ELASTIC_TYPE}
+    - IS_AWS_ELASTIC_TICKER_INDEX=${AWS_ELASTIC_TICKER_INDEX}
+    - IS_AWS_ELASTIC_TICKER_TYPE=${AWS_ELASTIC_TICKER_TYPE}
+    - IS_AWS_ELASTIC_TRANSACTION_INDEX=${AWS_ELASTIC_TRANSACTION_INDEX}
+    - IS_AWS_ELASTIC_TRANSACTION_TYPE=${AWS_ELASTIC_TRANSACTION_TYPE}
     - IS_GRAPHQL_HOST=${GRAPHQL_HOST}
     - IS_GRAPHQL_PORT=${GRAPHQL_PORT}
     - IS_MAX_DATETIME_PROXIMITY=${MAX_DATETIME_PROXIMITY}
