--- a/config.json
+++ b/config.json
@@ -17,5 +17,6 @@
 	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours",
 	"ETHEREUM_HOST": "",
-	"ETHERSCAN_TOKEN": ""
+	"ETHERSCAN_TOKEN": "",
+	"ETHPLORER_TOKEN": ""
 }
