Transaction tests and other improvements

--- a/config.json
+++ b/config.json
@@ -2,21 +2,27 @@
 	"AWS_REGION": "",
 	"AWS_ACCESS_ID": "",
 	"AWS_SECRET_KEY": "",
+	"AWS_DYNAMO_TABLE": "",
 	"AWS_SNS_TOPIC": "",
 	"AWS_SQS_QUEUE_URL": "",
-	"AWS_DYNAMO_TABLE": "",
 	"AWS_ELASTIC_HOST": "",
 	"AWS_ELASTIC_TICKER_INDEX": "icoindexstaging.cointradinghistory",
 	"AWS_ELASTIC_TICKER_TYPE": "icoindexstaging.cointradinghistory_type",
 	"AWS_ELASTIC_TRANSACTION_INDEX": "icoindexstaging.transactionhistory",
 	"AWS_ELASTIC_TRANSACTION_TYPE": "icoindexstaging.transactionhistory_type",
-	"GRAPHQL_HOST": "localhost",
-	"GRAPHQL_PORT": 8080,
+	"QUERYSERVICE_HOST": "localhost",
+	"QUERYSERVICE_PORT": 8080,
+	"MOCKSERVICE_HOST": "localhost",
+	"MOCKSERVICE_PORT": 8081,
 	"DYNAMO_INTERVAL": 100,
 	"EXCHANGE_INTERVAL": 300000,
 	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours",
-	"ETHEREUM_HOST": "",
+	"ETHEREUM_URL": "",
+	"ETHERSCAN_URL": "",
 	"ETHERSCAN_TOKEN": "",
-	"ETHPLORER_TOKEN": ""
+	"ETHPLORER_URL": "",
+	"ETHPLORER_TOKEN": "",
+	"BLOCKCYPHER_URL": "",
+	"BLOCKCYPHER_TOKEN": ""
 }
