txFetchService processing logic optimalizations and other improvements

--- a/config.json
+++ b/config.json
@@ -18,6 +18,8 @@
 	"EXCHANGE_INTERVAL": 300000,
 	"EXCHANGE_TIMEOUT": 60000,
 	"MAX_DATETIME_PROXIMITY": "24 hours",
+	"MAX_NUMBER_OF_HISTORY_CALLS_PER_CYCLE": 10,
+	"MAX_NUMBER_OF_CURRENT_CALLS_PER_CYCLE": 10,
 	"ETHEREUM_URL": "",
 	"ETHERSCAN_URL": "",
 	"ETHERSCAN_TOKEN": "",
