Ticker/Transaction/Address parameters splited and other improvements.

--- a/config.json
+++ b/config.json
@@ -2,14 +2,24 @@
 	"AWS_REGION": "",
 	"AWS_ACCESS_ID": "",
 	"AWS_SECRET_KEY": "",
-	"AWS_DYNAMO_TABLE": "",
 	"AWS_SNS_TOPIC": "",
-	"AWS_SQS_QUEUE_URL": "",
+	"AWS_SNS_STORE_TOPIC": "",
+	"AWS_SQS_URL": "",
+	"AWS_DYNAMO_TABLE": "",
 	"AWS_ELASTIC_HOST": "",
-	"AWS_ELASTIC_TICKER_INDEX": "icoindexstaging.cointradinghistory",
-	"AWS_ELASTIC_TICKER_TYPE": "icoindexstaging.cointradinghistory_type",
-	"AWS_ELASTIC_TRANSACTION_INDEX": "icoindexstaging.transactionhistory",
-	"AWS_ELASTIC_TRANSACTION_TYPE": "icoindexstaging.transactionhistory_type",
+	"AWS_SNS_TICKER_TOPIC": "",
+	"AWS_SQS_TICKER_URL": "",
+	"AWS_DYNAMO_TICKER_TABLE": "",
+	"AWS_ELASTIC_TICKER_INDEX": "",
+	"AWS_ELASTIC_TICKER_TYPE": "",
+	"AWS_SNS_TRANSACTION_TOPIC": "",
+	"AWS_SQS_TRANSACTION_URL": "",
+	"AWS_DYNAMO_TRANSACTION_TABLE": "",
+	"AWS_ELASTIC_TRANSACTION_INDEX": "",
+	"AWS_ELASTIC_TRANSACTION_TYPE": "",
+	"AWS_SNS_ADDRESS_TOPIC": "",
+	"AWS_SQS_ADDRESS_URL": "",
+	"AWS_DYNAMO_ADDRESS_TABLE": "",
 	"QUERYSERVICE_HOST": "localhost",
 	"QUERYSERVICE_PORT": 8080,
 	"MOCKSERVICE_HOST": "localhost",
