--- a/package.json
+++ b/package.json
@@ -17,19 +17,9 @@
 		"start": "node bin/index.js",
 		"build": "tsc",
 		"lint": "tslint -p . -t verbose",
-		"test": "node bin/index.js tickerTest|npx tap-difflet; node bin/index.js transactionTest|npx tap-difflet"
+		"test": "node bin/index.js tickerTest; node bin/index.js txTest"
 	},
 	"dependencies": {
-		"@types/elasticsearch": "^5.0.25",
-		"@types/express": "^4.16.0",
-		"@types/express-graphql": "^0.6.1",
-		"@types/graphql": "^0.13.3",
-		"@types/http-aws-es": "^1.1.3",
-		"@types/node": "^9.6.23",
-		"@types/ramda": "^0.25.35",
-		"@types/request-promise-native": "^1.0.15",
-		"@types/tape": "^4.2.32",
-		"@types/uuid": "^3.4.3",
 		"aws-sdk": "^2.299.0",
 		"body-parser": "^1.18.3",
 		"ccxt": "^1.16.87",
@@ -45,12 +35,21 @@
 		"ramda": "^0.25.0",
 		"request-promise-native": "^1.0.5",
 		"rxjs": "^6.2.2",
-		"tap-difflet": "^0.7.1",
-		"tape": "^4.9.1",
 		"uuid": "^3.3.2",
 		"winston": "^3.0.0"
 	},
 	"devDependencies": {
+		"@types/elasticsearch": "^5.0.25",
+		"@types/express": "^4.16.0",
+		"@types/express-graphql": "^0.6.1",
+		"@types/graphql": "^0.13.3",
+		"@types/http-aws-es": "^1.1.3",
+		"@types/node": "^9.6.23",
+		"@types/ramda": "^0.25.35",
+		"@types/request-promise-native": "^1.0.15",
+		"@types/tape": "^4.2.32",
+		"@types/uuid": "^3.4.3",
+		"tape": "^4.9.1",
 		"tslint": "^5.11.0",
 		"typescript": "^2.9.2"
 	}
