--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
 	"scripts": {
 		"start": "node bin/index.js",
 		"build": "tsc",
-		"lint": "tslint -p . -t verbose",
-		"test": "node bin/index.js tickerTest; node bin/index.js txTest"
+		"watch": "tsc --watch",
+		"lint": "tslint -p . -t verbose"
 	},
 	"dependencies": {
-		"aws-sdk": "^2.299.0",
+		"aws-sdk": "^2.320.0",
 		"body-parser": "^1.18.3",
-		"ccxt": "^1.16.87",
-		"commander": "^2.16.0",
+		"callbag-basics": "^3.0.0",
+		"ccxt": "^1.17.342",
+		"cids": "^0.5.5",
+		"commander": "^2.18.0",
 		"elasticsearch": "^15.1.1",
 		"eth-connect": "^0.3.0",
 		"express": "^4.16.3",
@@ -31,26 +33,31 @@
 		"graphql": "^0.13.2",
 		"graphql-request": "^1.6.0",
 		"http-aws-es": "^6.0.0",
+		"ipfs-api": "^24.0.2",
+		"ipld-dag-cbor": "^0.12.1",
 		"moment": "^2.22.2",
+		"multihashes": "^0.4.14",
+		"puppeteer": "^1.8.0",
 		"ramda": "^0.25.0",
 		"request-promise-native": "^1.0.5",
-		"rxjs": "^6.2.2",
+		"rxjs": "^6.3.2",
 		"uuid": "^3.3.2",
-		"winston": "^3.0.0"
+		"winston": "^3.1.0"
 	},
 	"devDependencies": {
-		"@types/elasticsearch": "^5.0.25",
+		"@types/elasticsearch": "^5.0.26",
 		"@types/express": "^4.16.0",
 		"@types/express-graphql": "^0.6.1",
 		"@types/graphql": "^0.13.3",
 		"@types/http-aws-es": "^1.1.3",
-		"@types/node": "^9.6.23",
-		"@types/ramda": "^0.25.35",
+		"@types/node": "^9.6.32",
+		"@types/puppeteer": "^1.6.4",
+		"@types/ramda": "^0.25.38",
 		"@types/request-promise-native": "^1.0.15",
 		"@types/tape": "^4.2.32",
-		"@types/uuid": "^3.4.3",
+		"@types/uuid": "^3.4.4",
 		"tape": "^4.9.1",
 		"tslint": "^5.11.0",
-		"typescript": "^2.9.2"
+		"typescript": "^3.0.3"
 	}
 }
